Persistency, homepage animation

--- a/srcs/nginx/index.html
+++ b/srcs/nginx/index.html
@@ -1,8 +1,19 @@
-<html>
-<head>
-<title>ft_services by tmarx</title>
-</head>
-<body>
-<h1>ft_services running !</h1>
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        cursor: none;
+      }
+    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
+    <title>ft_services by tmarx</title>
+  </head>
+  <body></body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
+  <script src="./script.js"></script>
 </html>
